k8s-manifests/veles-drive/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: veles-drive
  labels:
    name: veles-drive
    project: veles-empire
